@@ -9,8 +9,9 @@
    * Example: {{{My $(NO_SUCH_MACRO undefined) macro}}} will render as {{{My $(NO_SUCH_MACRO undefined) macro}}} instead of {{{My  macro}}}
  * Added predefined DDoc macro: {{{D}}}. Does the same as {{{D_CODE}}}.
  * Changed some of the dialog messages for the Open Definition operation to be more clear and concise.
- * Fixed regression bug in editor resolving operations where a reference would not be found if the text cursor was at the very end of the reference. 
-   * Affects: Open Definition, Open Definition hyperlinks, References search, DDoc view hovers.  
+ * Fixed regression bug in editor resolving functionality where a reference would not be found if the cursor was at the very end of the reference.
+   * Affects: Open Definition, Open Definition hyperlinks, References search, DDoc view hovers.
+ * Restricted some editor functionality to named references only (Open Definition, Open Definition hyperlinks, DDoc view hovers).
 
 == DDT 0.7.0 (2013-08-15) ==
  * Requirements changes: now requires minimum Java VM version 1.7 .
